# PyFlameRT

./: .gitignore  CLAUDE.md  CMakeLists.txt  Project_Overview.md  README.md  pyproject.toml  tmpclaude-ab9c-cwd
bindings/: CMakeLists.txt  batching_bind.cpp  cache_bind.cpp  custom_op_bind.cpp  distillation_bind.cpp  import_bind.cpp  memory_bind.cpp  opt_bind.cpp  partition_bind.cpp  pruning_bind.cpp  pyflame_rt.cpp  quantization_bind.cpp  serving_bind.cpp  session_bind.cpp  streaming_bind.cpp  tensor_bind.cpp  types_bind.cpp
deploy/docker/: Dockerfile  entrypoint.py
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml  servicemonitor.yaml
docs/: API_Reference.md  Developer_Guide.md  Examples_and_Tutorials.md  Extending_PyFlameRT.md
include/pyflame_rt/: backend.hpp  errors.hpp  graph.hpp  node.hpp  options.hpp  pyflame_rt.hpp  registry.hpp  session.hpp  tensor.hpp  types.hpp
include/pyflame_rt/batching/: dynamic_batcher.hpp
include/pyflame_rt/cache/: binary_cache.hpp  mmap_loader.hpp
include/pyflame_rt/custom/: custom_op.hpp
include/pyflame_rt/distillation/: distillation.hpp
include/pyflame_rt/import/: importer.hpp  onnx_importer.hpp  op_converter.hpp  pytorch_importer.hpp  shape_inference.hpp  torchscript_importer.hpp
include/pyflame_rt/io/: model_io.hpp
include/pyflame_rt/memory/: memory_pool.hpp
include/pyflame_rt/opt/: constant_folding.hpp  cse.hpp  dead_code_elimination.hpp  layout_optimization.hpp  operator_fusion.hpp  pass.hpp  passes.hpp  pattern_matcher.hpp
include/pyflame_rt/partition/: partition.hpp
include/pyflame_rt/pruning/: pruning.hpp  sparse_tensor.hpp
include/pyflame_rt/quantization/: calibrator.hpp  half_types.hpp  quant_config.hpp  quant_ops.hpp  quant_params.hpp  quantizer.hpp
include/pyflame_rt/serving/: http_server.hpp  metrics.hpp  model_registry.hpp  model_server.hpp  server_config.hpp  types.hpp
include/pyflame_rt/streaming/: async_session.hpp
python/pyflame_rt/: __init__.py
python/pyflame_rt/serving/: __init__.py  client.py
src/: CMakeLists.txt  graph.cpp  node.cpp  options.cpp  registry.cpp  session.cpp  tensor.cpp
src/backends/cpu/: executor.cpp  executor.hpp
src/backends/cpu/ops/: activation.cpp  math.cpp  nn.cpp  quantized_ops.cpp  reduction.cpp  tensor_ops.cpp
src/batching/: dynamic_batcher.cpp
src/cache/: binary_cache.cpp  mmap_loader.cpp
src/custom/: CMakeLists.txt  custom_op.cpp  custom_op_registry.cpp
src/distillation/: CMakeLists.txt  dataset.cpp  distillation_losses.cpp  distillation_trainer.cpp  student_architecture.cpp
src/import/: CMakeLists.txt  importer.cpp  op_converter.cpp  shape_inference.cpp
src/import/onnx/: onnx_importer.cpp  onnx_op_converters.cpp  onnx_parser.cpp  onnx_parser.hpp  onnx_proto.hpp
src/import/pytorch/: pickle_parser.cpp  pickle_parser.hpp  pytorch_importer.cpp
src/import/torchscript/: torchscript_importer.cpp
src/io/: loader.cpp  loader.hpp  pyflame_format.cpp  pyflame_format.hpp
src/memory/: memory_pool.cpp
src/opt/: CMakeLists.txt  constant_folding.cpp  cse.cpp  dead_code_elimination.cpp  fusion_patterns.cpp  layout_optimization.cpp  operator_fusion.cpp  pass_manager.cpp  pattern_matcher.cpp
src/partition/: CMakeLists.txt  cost_model.cpp  graph_partitioner.cpp  partitioned_executor.cpp  wse_partition.cpp
src/pruning/: CMakeLists.txt  magnitude_pruning.cpp  nm_sparsity.cpp  pruning.cpp  sparse_tensor.cpp  structured_pruning.cpp
src/quantization/: CMakeLists.txt  calibrator.cpp  half_types.cpp  quant_ops.cpp  quant_params.cpp  quantizer.cpp
src/serving/: CMakeLists.txt  http_server.cpp  metrics.cpp  model_registry.cpp  model_server.cpp  types.cpp
src/streaming/: async_session.cpp
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  test_custom_op.cpp  test_distillation.cpp  test_executor.cpp  test_graph.cpp  test_loader.cpp  test_options.cpp  test_partition.cpp  test_pruning.cpp  test_registry.cpp  test_tensor.cpp  test_types.cpp
tests/python/: conftest.py  test_pyflame_rt.py
